# xmlsec-tiamat-test

./: MANIFEST.in  README.md  build.conf  run.py  setup.cfg
xmlsec1_tiamat_test/: __init__.py
