[metadata]
name = xmlsec-tiamat-test
version = 1.0.0
description = Test xmlsec1 tiamat build
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/s0undt3ch/xmlsec-tiamat-test
author = Pedro Algarvio
author_email = pedro@algarvio.me
license = Apache 2
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
  lxml
  xmlsec
python_requires = >=3.6.1
include_package_data = True
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    xmlsec1-tiamat-test = xmlsec1_tiamat_test:main

[options.package_data]
xmlsec1_tiamat_test = *
